# cyclic-cellular-automaton-cadmium

./: .gitignore  CMakeLists.txt  README.md  cyclic_config.json  cyclic_config_stripes.json  cyclic_config_wrapped.json  main_cyclic.cpp  run_basic.bat  run_basic.sh  run_stripes.bat  run_stripes.sh  run_wrapped.bat  run_wrapped.sh  visualize_cyclic.py
include/: cyclic_coupled.hpp  cyclic_grid_cell.hpp  cyclic_state.hpp
logs/: cyclic_basic_log.csv  cyclic_stripes_log.csv  cyclic_wrapped_log.csv
